--- a/GestaoDeTarefas/src/main/resources/templates/registro.html
+++ b/GestaoDeTarefas/src/main/resources/templates/registro.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registrar Novo Usuário</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <script>
         function mostrarMensagemErro(mensagem) {
             alert(mensagem);
