--- a/GestaoDeTarefas/src/main/resources/templates/tarefas/listatarefas.html
+++ b/GestaoDeTarefas/src/main/resources/templates/tarefas/listatarefas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Listagem de Tarefas</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
 <h1>Listagem de Tarefas</h1>
@@ -28,6 +29,8 @@
     </tr>
     </tbody>
 </table>
-<a href="/tarefas/nova">Adicionar Nova Tarefa</a>
+<a href="/tarefas/formnova">Adicionar Nova Tarefa</a>
+
+</form>
 </body>
 </html>
