--- a/GestaoDeTarefas/src/main/resources/templates/categorias/listacategoria.html
+++ b/GestaoDeTarefas/src/main/resources/templates/categorias/listacategoria.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Listar Categorias</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
 <h2>Listagem de Categorias</h2>
