--- a/GestaoDeTarefas/src/main/resources/templates/categorias/formnova.html
+++ b/GestaoDeTarefas/src/main/resources/templates/categorias/formnova.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulário de Nova Categoria</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/formnovacategoria.css">
 </head>
 <body>
 <h1>Formulário de Nova Categoria</h1>
