--- a/GestaoDeTarefas/src/main/resources/templates/tarefas/formnova.html
+++ b/GestaoDeTarefas/src/main/resources/templates/tarefas/formnova.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Formulário de Tarefa</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/formnova.css">
 </head>
 <body>
 <h1>Nova Tarefa</h1>
