--- a/GestaoDeTarefas/src/main/resources/static/css/formnova.css
+++ b/GestaoDeTarefas/src/main/resources/static/css/formnova.css
@@ -12,18 +12,9 @@ h1 {
   margin-bottom: 20px;
 }
 
-a {
-  text-decoration: none;
-  color: #337ab7;
-}
-
-a:hover {
-  color: #23527c;
-}
-
 /* Form Styles */
 form {
-  max-width: 300px;
+  max-width: 400px;
   margin: 40px auto;
   padding: 20px;
   background-color: #fff;
@@ -31,12 +22,16 @@ form {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+div {
+  margin-bottom: 20px;
+}
+
 label {
   display: block;
   margin-bottom: 10px;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], textarea, select {
   width: 100%;
   height: 40px;
   margin-bottom: 20px;
@@ -44,7 +39,7 @@ input[type="text"], input[type="password"] {
   border: 1px solid #ccc;
 }
 
-input[type="text"]:focus, input[type="password"]:focus {
+input[type="text"]:focus, textarea:focus, select:focus {
   border-color: #aaa;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -63,24 +58,9 @@ button[type="submit"]:hover {
   background-color: #23527c;
 }
 
-/* Error Message Styles */
-p {
-  color: #red;
-  font-size: 14px;
-  margin-bottom: 20px;
-}
+/* tarefa.css */
 
-/* Registro Link Styles */
-.registro-link {
-  display: block;
-  text-align: center;
-  margin-top: 20px;
-  font-size: 16px;
-}
-
-/* login.css */
-
-/* Additional Styles for Login Page */
+/* Additional Styles for Task Form Page */
 form {
   background-image: linear-gradient(to bottom, #f0f0f0, #ccc);
 }
