--- a/GestaoDeTarefas/src/main/resources/templates/login.html
+++ b/GestaoDeTarefas/src/main/resources/templates/login.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
-</head>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"> </head>
+
 <body>
 <h1>Login</h1>
 <form action="/login" method="post">
     <label for="username">Nome de Usuário:</label>
-    <input type="text" id="username" name="username" required><br>
-
+    <input type="text" id="username" name="username" required>
+    <br>
     <label for="password">Senha:</label>
-    <input type="password" id="password" name="password" required><br>
-
+    <input type="password" id="password" name="password" required>
+    <br>
     <button type="submit">Entrar</button>
     <p th:text="${erro}"></p>
-</form>
-<a href="/registro" class="registro-link">Registrar Novo Usuário</a>
-</body>
+</form> <a href="/registro" class="registro-link">Registrar Novo Usuário</a> </body>
+
 </html>
