--- a/GestaoDeTarefas/src/main/resources/templates/tarefas/listatarefas.html
+++ b/GestaoDeTarefas/src/main/resources/templates/tarefas/listatarefas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Listagem de Tarefas</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/listatarefa.css">
 </head>
 <body>
 <h1>Listagem de Tarefas</h1>
